--- a/public/search_write.html
+++ b/public/search_write.html
@@ -31,25 +31,23 @@
 					<div class="modal-box" style="display: none;">
 						<div class="modal_addCorp">
 							<div>기관 등록하기</div>
-							<form id="frm_add_corp">
+							<form id="frm_add_corp" method="post" action="/search_write/add">
 								<div class="Corp_data">
 									<div>
 										<label for="modal_Corp_name">기관명</label>
-										<input id="modal_Corp_name" type="text" placeholder="예) 행복사회복지사복지관">
+										<input id="modal_Corp_name" type="text" placeholder="예) 행복사회복지사복지관" name="Corp_name" required>
 									</div>
 									<div>
 										<label>소재지</label>
 										<div>
-											<select>시도
-												<option>헤이</option>
-											</select>
-											<select>시군구</select>	
+											<select name="sido" id="sido1"></select>
+											<select name="gugun" id="gugun1"></select>	
 										</div>
 									</div>
 								</div>
 								<div class="btn_modalSubmit">
-									<button class="modal_cancel">취소</button>
-									<button class="modal_submit">등록</button>
+									<button class="modal_cancel" type="button" onclick="modal_cancel();">취소</button>
+									<button class="modal_submit" type="submit" form="frm_add_corp">등록</button>
 								</div>	
 							</form>
 						</div>
@@ -62,6 +60,7 @@
 		</footer>
 		<script type="module" src="./js/webcomponent.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 		<script src="https://unpkg.com/hangul-js" type="text/javascript"></script>
 		<script defer src="./js/search_write.js"></script>
 	</body>
