리뷰 좋아요 버튼 수정중

--- a/public/review.html
+++ b/public/review.html
@@ -177,10 +177,10 @@
 											<span>{{content.hashtag_5}}</span>
 										</div>	
 									</div>
-									<button class="comment_like">
+									<button type="button" class="comment_like">
 										<span></span>
 										<span>도움이 돼요</span>
-										<span>({{content.likes}})</span>
+										<span>(<span>{{content.likes}}</span>)</span>
 									</button>
 								</div>
 							</li>
