--- a/public/review_write.html
+++ b/public/review_write.html
@@ -24,7 +24,7 @@
 								<span>{{Corp.name}}</span>
 								<span>{{Corp.sido+" "+Corp.gugun}}</span>    
 							</div>
-							{% if cnt %}
+							{% if Corp.cnt %}
 							<div>
 								<div class="star_bg">
 									<span style="width:{{Corp.avg_total*20}}%"></span>
