--- a/public/search_write.html
+++ b/public/search_write.html
@@ -7,7 +7,7 @@
 		<title>리뷰작성</title>
 		<link href="./styles/style_reset.css" rel="stylesheet" type="text/css">
 		<link href="./styles/webcomponent.css" rel="stylesheet">
-    <link href="./styles/review_write_search.css" rel="stylesheet">
+    <link href="./styles/search_write.css" rel="stylesheet">
 	</head>
 	<body>
 		<div class="container">
