review_rending markup

--- a/public/review.html
+++ b/public/review.html
@@ -48,9 +48,9 @@
 						</div>
 						{% endif %}
 					</div>
-					<a href="/review_write/{{Corp.name}}" class="btn_review">이 기관 리뷰하기</a>
+					<button type="button" onclick="location.href='/review_write/{{Corp.name}}'" class="btn_review">이 기관 리뷰하기</button>
 				</div>
-				<a href="/review_write/{{Corp.name}}" class="btn_write"></a>
+				<button type="button" onclick="location.href='/review_write/{{Corp.name}}'" class="btn_write"></button>
 			</div>
 			<div class="contents_wrap">
 				<div class="contents_main">
