--- a/public/search_review.html
+++ b/public/search_review.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>기관검색</title>
-  <link href="./styles/style_reset.css" rel="stylesheet" type="text/css">
-  <link href="./styles/webcomponent.css" rel="stylesheet">
-  <link href="./styles/search_review.css" rel="stylesheet">
+  <link href="/styles/style_reset.css" rel="stylesheet" type="text/css">
+  <link href="/styles/webcomponent.css" rel="stylesheet">
+  <link href="/styles/search_review.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -15,15 +15,340 @@
       <header-component data-name="{{User.nickname}}"></header-component>
     </div>
     <main>
-
+      <section class="banner">
+        <div class="banner-search">
+          <h1>기관리뷰</h1>
+          <div>
+            <P>전/현직자들의 생생한 후기가 궁금하다면</P>
+            <P>지금 바로 찾아보세요!</P>  
+          </div>
+          <form class="search">
+            <fieldset>
+              <label><select name="sido" id="sido1"></select></label>              
+              <input placeholder="기관 이름을 입력해주세요">
+              <button></button>
+            </fieldset>
+          </form>
+        </div>
+        <div class="banner-image"></div>
+      </section>
+      <section class="first-contents">
+        <div class="recent-reviews">
+          <h1>최근 리뷰</h1>
+          <div>
+            <div class="review">
+              <div>
+                <span>서울특별시사회복지사협회</span>
+                <span>전직자</span>
+                <span>23.05</span>  
+              </div>
+              <p>개울가에 이르니, 며칠째 보이지 않던 소녀가 건너편 가에 앉아 물장난을 하고 있었다. 얼마 전에 소녀 앞에서 한 번 실수를 했을 뿐, 여태 큰길 가듯이 건너던 징검다리를 오늘은 조심스럽게 건넌다. </p>
+              <button>더보기</button>
+            </div>
+            <div class="review">
+              <div>
+                <span>서울특별시사회복지사협회</span>
+                <span>전직자</span>
+                <span>23.05</span>  
+              </div>
+              <p>개울가에 이르니, 며칠째 보이지 않던 소녀가 건너편 가에 앉아 물장난을 하고 있었다. 얼마 전에 소녀 앞에서 한 번 실수를 했을 뿐, 여태 큰길 가듯이 건너던 징검다리를 오늘은 조심스럽게 건넌다. </p>
+              <button>더보기</button>
+            </div>
+            <div class="review">
+              <div>
+                <span>서울특별시사회복지사협회</span>
+                <span>전직자</span>
+                <span>23.05</span>  
+              </div>
+              <p>개울가에 이르니, 며칠째 보이지 않던 소녀가 건너편 가에 앉아 물장난을 하고 있었다. 얼마 전에 소녀 앞에서 한 번 실수를 했을 뿐, 여태 큰길 가듯이 건너던 징검다리를 오늘은 조심스럽게 건넌다. </p>
+              <button>더보기</button>
+            </div>
+          </div>
+        </div>
+        <div class="top-score">
+          <h1>전체 만족도 Top</h1>
+          <div class="top-score-contents">
+            <div class="top-score-item top1">
+              <div>이미지</div>
+              <div>
+                <div class="ts-item-detail">
+                  <p>서울특별시사회복지사협회</p>
+                  <p>서울특별시 영등포구</p>
+                  <div class="star_bg">
+                    <span style="width: 50%"></span>
+                  </div>
+                </div>
+                <span>3.4</span>
+              </div>
+            </div>
+            <div class="top-score-item">
+              <div>이미지</div>
+              <div>
+                <div class="ts-item-detail">
+                  <p>서울특별시사회복지사협회</p>
+                  <p>서울특별시 영등포구</p>
+                  <div class="star_bg">
+                    <span style="width: 50%"></span>
+                  </div>
+                </div>
+                <span>3.4</span>
+              </div>
+            </div>
+            <div class="top-score-item">
+              <div>이미지</div>
+              <div>
+                <div class="ts-item-detail">
+                  <p>서울특별시사회복지사협회</p>
+                  <p>서울특별시 영등포구</p>
+                  <div class="star_bg">
+                    <span style="width: 50%"></span>
+                  </div>
+                </div>
+                <span>3.4</span>
+              </div>
+            </div>
+            <div class="top-score-item">
+              <div>이미지</div>
+              <div>
+                <div class="ts-item-detail">
+                  <p>서울특별시사회복지사협회</p>
+                  <p>서울특별시 영등포구</p>
+                  <div class="star_bg">
+                    <span style="width: 50%"></span>
+                  </div>
+                </div>
+                <span>3.4</span>
+              </div>
+            </div>
+          </div>
+          <div class="top-score-banner">
+            <p>지금 후기 작성하면 전체 리뷰 확인 가능</p>
+            <p>별점 주고 후기 보러가기</p>
+            <span class="ts-banner-img"></span>
+          </div>
+        </div>
+      </section>
+      <section class="second-contents">
+        <h1>항목별 Top5</h1>
+        <div>
+          <div>
+            <ul class="details">
+              <li class="select-detail"><button>커리어 향상</button></li>
+              <li><button>업무와 삶의 균형</button></li>
+              <li><button>복리후생</button></li>
+              <li><button>조직 내 문화</button></li>
+              <li><button>리더십</button></li>
+            </ul>
+          </div>
+          <ul class="detail-top5">
+            <!-- for문써서 li 반복 처리 -->
+            <li class="detail-top5-item">
+              <div class="detail-top5-no">1</div>
+              <div class="detail-top5-content">
+                <div class="detail-top5-corp">
+                  <p>서울특별시사회복지사협회</p>
+                  <p>서울특별시 영등포구</p>
+                </div>
+                <div class="detail-top5-highlight">
+                  <p>커리어 향상</p>
+                  <div>
+                    <img src="/styles/images/Star_1.png">
+                    <span>3.6</span>
+                  </div>
+                </div>
+                <ul class="detail-top5-details">
+                  <li style="display: none;">
+                    <p>커리어 향상</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>업무와 삶의 균형</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>복리후생</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>조직 내 문화</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>리더십</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="detail-top5-item">
+              <div class="detail-top5-no">1</div>
+              <div class="detail-top5-content">
+                <div class="detail-top5-corp">
+                  <p>서울특별시사회복지사협회</p>
+                  <p>서울특별시 영등포구</p>
+                </div>
+                <div class="detail-top5-highlight">
+                  <p>커리어 향상</p>
+                  <div>
+                    <img src="/styles/images/Star_1.png">
+                    <span>3.6</span>
+                  </div>
+                </div>
+                <ul class="detail-top5-details">
+                  <li style="display: none;">
+                    <p>커리어 향상</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>업무와 삶의 균형</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>복리후생</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>조직 내 문화</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>리더십</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="detail-top5-item">
+              <div class="detail-top5-no">1</div>
+              <div class="detail-top5-content">
+                <div class="detail-top5-corp">
+                  <p>서울특별시사회복지사협회</p>
+                  <p>서울특별시 영등포구</p>
+                </div>
+                <div class="detail-top5-highlight">
+                  <p>커리어 향상</p>
+                  <div>
+                    <img src="/styles/images/Star_1.png">
+                    <span>3.6</span>
+                  </div>
+                </div>
+                <ul class="detail-top5-details">
+                  <li style="display: none;">
+                    <p>커리어 향상</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>업무와 삶의 균형</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>복리후생</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>조직 내 문화</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>리더십</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="detail-top5-item">
+              <div class="detail-top5-no">1</div>
+              <div class="detail-top5-content">
+                <div class="detail-top5-corp">
+                  <p>서울특별시사회복지사협회</p>
+                  <p>서울특별시 영등포구</p>
+                </div>
+                <div class="detail-top5-highlight">
+                  <p>커리어 향상</p>
+                  <div>
+                    <img src="/styles/images/Star_1.png">
+                    <span>3.6</span>
+                  </div>
+                </div>
+                <ul class="detail-top5-details">
+                  <li style="display: none;">
+                    <p>커리어 향상</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>업무와 삶의 균형</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>복리후생</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>조직 내 문화</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>리더십</p>
+                    <div class="star_bg">
+                      <span style="width: 50%"></span>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+          <button class="btn-left"><span></span></button>
+          <button class="btn-right"><span></span></button>
+        </div>
+      </section>
     </main>
   </div>
   <footer>
     <footer-component></footer-component>
   </footer>
-  <script type="module" src="./js/webcomponent.js"></script>
+  <script type="module" src="/js/webcomponent.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
-  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://unpkg.com/hangul-js" type="text/javascript"></script>
+  <script defer src="/js/search_review.js"></script>
+  <script defer src="/js/modules.js"></script>
 </body>
 </html>
