--- a/public/search_write.html
+++ b/public/search_write.html
@@ -63,5 +63,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 		<script src="https://unpkg.com/hangul-js" type="text/javascript"></script>
 		<script defer src="./js/search_write.js"></script>
+		<script defer src="/js/modules.js"></script>
+
 	</body>
 </html>
