--- a/public/review_detail.html
+++ b/public/review_detail.html
@@ -7,7 +7,7 @@
 	<title>review</title>
 	<link href="/styles/style_reset.css" rel="stylesheet" type="text/css">
 	<link href="/styles/webcomponent.css" rel="stylesheet">
-	<link href="/styles/review.css" rel="stylesheet" type="text/css">
+	<link href="/styles/review_detail.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div class="container">
@@ -194,75 +194,31 @@
 					<input>
 					<div class="side_contents">
 						<ul>
-							<li>
-								<p>{{top10[0].name}}</p>
+							{% for top in top10.slice(0,3) %}
+							<li class="side_content">
+								<p>{{top.name}}</p>
 								<div>
 									<div class="star_bg">
-										<span style="width: {{top10[0].avg_total*20}}%"></span>
+										<span style="width: {{top.avg_total*20}}%"></span>
 									</div>
-									<span>{{top10[0].avg_total.toFixed(1)}}</span>
-									<span>({{top10[0].cnt}}개 리뷰)</span>		
+									<span>{{top.avg_total.toFixed(1)}}</span>
+									<span>({{top.cnt}}개 리뷰)</span>		
 								</div>
 								<div>
-									<p>{{top10[0].pros}}</p>
+									<p>{{top.pros}}</p>
 									<div>
-										{% if top10[0].last_date == '9999-12' %}
+										{% if top.last_date == '9999-12' %}
 										<span>현직원</span>
 										{% else %}
 										<span>전직원</span>
 										{% endif %}
-										<span>{{top10[0].type}}</span>
-										<span>{{top10[0].date}}</span>
-										<button type="button" onclick="location.href='/review/{{top10[0].name}}'">리뷰보기</button>	
+										<span>{{top.type}}</span>
+										<span>{{top.date}}</span>
+										<button type="button" onclick="location.href='/review/{{top.name}}'">리뷰보기</button>	
 									</div>
 								</div>
 							</li>
-							<li>
-								<p>{{top10[1].name}}</p>
-								<div>
-									<div class="star_bg">
-										<span style="width: {{top10[1].avg_total*20}}%"></span>
-									</div>
-									<span>{{top10[1].avg_total.toFixed(1)}}</span>
-									<span>({{top10[1].cnt}}개 리뷰)</span>		
-								</div>
-								<div>
-									<p>{{top10[1].pros}}</p>
-									<div>
-										{% if top10[1].last_date == '9999-12' %}
-										<span>현직원</span>
-										{% else %}
-										<span>전직원</span>
-										{% endif %}
-										<span>{{top10[1].type}}</span>
-										<span>{{top10[1].date}}</span>
-										<button type="button" onclick="location.href='/review/{{top10[1].name}}'">리뷰보기</button>
-									</div>
-								</div>
-							</li>
-							<li>
-								<p>{{top10[2].name}}</p>
-								<div>
-									<div class="star_bg">
-										<span style="width: {{top10[2].avg_total*20}}%"></span>
-									</div>
-									<span>{{top10[2].avg_total.toFixed(1)}}</span>
-									<span>({{top10[2].cnt}}개 리뷰)</span>		
-								</div>
-								<div>
-									<p>{{top10[2].pros}}</p>
-									<div>
-										{% if top10[2].last_date == '9999-12' %}
-										<span>현직원</span>
-										{% else %}
-										<span>전직원</span>
-										{% endif %}
-										<span>{{top10[2].type}}</span>
-										<span>{{top10[2].date}}</span>
-										<button type="button" onclick="location.href='/review/{{top10[2].name}}'">리뷰보기</button>
-									</div>
-								</div>
-							</li>
+							{% endfor %}
 						</ul>
 					</div>
 				</div>
@@ -275,6 +231,6 @@
 	<totop-component></totop-component>
 	<script type="module" src="/js/webcomponent.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-	<script defer src="/js/review.js"></script>
+	<script defer src="/js/review_detail.js"></script>
 </body>
 </html>
