--- a/public/search_review.html
+++ b/public/search_review.html
@@ -36,90 +36,41 @@
         <div class="recent-reviews">
           <h1>최근 리뷰</h1>
           <div>
+            {% for review_item in review.slice(0,3) %}
             <div class="review">
               <div>
-                <span>서울특별시사회복지사협회</span>
-                <span>전직자</span>
-                <span>23.05</span>  
+                <span>{{review_item.Corp_name}}</span>
+                {% if review_item.last_date == '9999-12' %}
+                <span>현직원</span>
+                {% else %}
+                <span>전직원</span>
+                {% endif %}                
+                <span>{{review_item.date}}</span>  
               </div>
-              <p>개울가에 이르니, 며칠째 보이지 않던 소녀가 건너편 가에 앉아 물장난을 하고 있었다. 얼마 전에 소녀 앞에서 한 번 실수를 했을 뿐, 여태 큰길 가듯이 건너던 징검다리를 오늘은 조심스럽게 건넌다. </p>
-              <button>더보기</button>
+              <p>{{review_item.highlight}}</p>
+              <button type="button" onclick="location.href='/review/{{review_item.Corp_name}}'">더보기</button>
             </div>
-            <div class="review">
-              <div>
-                <span>서울특별시사회복지사협회</span>
-                <span>전직자</span>
-                <span>23.05</span>  
-              </div>
-              <p>개울가에 이르니, 며칠째 보이지 않던 소녀가 건너편 가에 앉아 물장난을 하고 있었다. 얼마 전에 소녀 앞에서 한 번 실수를 했을 뿐, 여태 큰길 가듯이 건너던 징검다리를 오늘은 조심스럽게 건넌다. </p>
-              <button>더보기</button>
-            </div>
-            <div class="review">
-              <div>
-                <span>서울특별시사회복지사협회</span>
-                <span>전직자</span>
-                <span>23.05</span>  
-              </div>
-              <p>개울가에 이르니, 며칠째 보이지 않던 소녀가 건너편 가에 앉아 물장난을 하고 있었다. 얼마 전에 소녀 앞에서 한 번 실수를 했을 뿐, 여태 큰길 가듯이 건너던 징검다리를 오늘은 조심스럽게 건넌다. </p>
-              <button>더보기</button>
-            </div>
+            {% endfor %}
           </div>
         </div>
         <div class="top-score">
           <h1>전체 만족도 Top</h1>
           <div class="top-score-contents">
+            {% for top in top10.slice(0,4) %}
             <div class="top-score-item top1">
               <div>이미지</div>
               <div>
                 <div class="ts-item-detail">
-                  <p>서울특별시사회복지사협회</p>
-                  <p>서울특별시 영등포구</p>
+                  <p>{{top.name}}</p>
+                  <p>{{top.sido}} {{top.gugun}}</p>
                   <div class="star_bg">
-                    <span style="width: 50%"></span>
+                    <span style="width: {{top.avg_total*20}}%"></span>
                   </div>
                 </div>
-                <span>3.4</span>
+                <span>{{top.avg_total.toFixed(1)}}</span>
               </div>
             </div>
-            <div class="top-score-item">
-              <div>이미지</div>
-              <div>
-                <div class="ts-item-detail">
-                  <p>서울특별시사회복지사협회</p>
-                  <p>서울특별시 영등포구</p>
-                  <div class="star_bg">
-                    <span style="width: 50%"></span>
-                  </div>
-                </div>
-                <span>3.4</span>
-              </div>
-            </div>
-            <div class="top-score-item">
-              <div>이미지</div>
-              <div>
-                <div class="ts-item-detail">
-                  <p>서울특별시사회복지사협회</p>
-                  <p>서울특별시 영등포구</p>
-                  <div class="star_bg">
-                    <span style="width: 50%"></span>
-                  </div>
-                </div>
-                <span>3.4</span>
-              </div>
-            </div>
-            <div class="top-score-item">
-              <div>이미지</div>
-              <div>
-                <div class="ts-item-detail">
-                  <p>서울특별시사회복지사협회</p>
-                  <p>서울특별시 영등포구</p>
-                  <div class="star_bg">
-                    <span style="width: 50%"></span>
-                  </div>
-                </div>
-                <span>3.4</span>
-              </div>
-            </div>
+            {% endfor %}
           </div>
           <div class="top-score-banner">
             <p>지금 후기 작성하면 전체 리뷰 확인 가능</p>
