--- a/public/review_write.html
+++ b/public/review_write.html
@@ -29,7 +29,7 @@
 								<div class="star_bg">
 									<span style="width:{{Corp.avg_total*20}}%"></span>
 								</div>
-								<span>{{Corp.avg_total.toFixed(1)}}</span>
+								<span>{{Corp.avg_total}}</span>
 								<span>({{Corp.cnt}}개 리뷰)</span>
 							</div>
 							<ul class="hashtag_top">
