--- a/public/main.html
+++ b/public/main.html
@@ -41,9 +41,9 @@
             <h2>최근 작성된 리뷰</h2>
             <div class="recentReview">
               <button class="btn_recentReview">더보기</button>
-              <div class="recenetReview_con_wrap">
-                <div class="recenetReview_con focus">
-                  <div class="recenetReview_con_top">
+              <div class="recentReview_con_wrap">
+                <div class="recentReview_con focus">
+                  <div class="recentReview_con_top">
                     <strong>아득히 가 버린 것 잊어버린 하늘과 아른아른 오지 않고 보고 싶은 하늘에 어쩌면 만도 질 볼이 고운 사람이 난 혼자 그리워라.</strong>
                     <p>
                       <span>장점</span>
@@ -53,28 +53,71 @@
                       <span>단점</span>
                       양들이 뒤척이는 서슬에 짚이 버스럭거리며, 혹은 잠결에 매하고 울음소리를 내는 놈도 있었습니다.
                     </p>
-                    <div class="recenetReview_con_bottom">
+                  </div>
+                  <div class="recentReview_con_bottom">
+                    <div class="blind">별점 영역</div>
+                    <ul>
+                      <li>서울사회복지사협회</li>
+                      <li>a***</li>
+                      <li>23.05.24</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="recentReview_con_inner">
+                  <div class="recentReview_con">
+                    <div class="recentReview_con_top">
+                      <strong>저 별에 관해 서는 목동들 사이에 다음과 같은 얘기가 전하고 있답니다.</strong>
+                      <p>
+                        <span>장점</span>
+                        그렇게 손으로 턱을 괸 채 염소 모피를 두르고 있는 모습은, 그대로 귀여운 천국의 목자였습니다.
+                      </p>
+                      <p>
+                        <span>단점</span>
+                        양들이 뒤척이는 서슬에 짚이 버스럭거리며, 혹은 잠결에 매하고 울음소리를 내는 놈도 있었습니다.
+                      </p>
+                    </div>
+                    <div class="recentReview_con_bottom">
                       <div class="blind">별점 영역</div>
                       <ul>
-                        <li>서울사회복지사협회</li>
-                        <li>a***</li>
-                        <li>23.05.24</li>
+                        <li>서울구로지역자활센터</li>
+                        <li>b***</li>
+                        <li>23.05.28</li>
                       </ul>
                     </div>
                   </div>
-                </div>
-                <div class="recenetReview_con">
-                  <div class="recenetReview_con_top">
-                    <strong>저 별에 관해 서는 목동들 사이에 다음과 같은 얘기가 전하고 있답니다.</strong>
-                    <p>
-                      <span>장점</span>
-                      그렇게 손으로 턱을 괸 채 염소 모피를 두르고 있는 모습은, 그대로 귀여운 천국의 목자였습니다.
-                    </p>
-                    <p>
-                      <span>단점</span>
-                      양들이 뒤척이는 서슬에 짚이 버스럭거리며, 혹은 잠결에 매하고 울음소리를 내는 놈도 있었습니다.
-                    </p>
-                    <div class="recenetReview_con_bottom">
+                  <div class="recentReview_con">
+                    <div class="recentReview_con_top">
+                      <strong>저 별에 관해 서는 목동들 사이에 다음과 같은 얘기가 전하고 있답니다.</strong>
+                      <p>
+                        <span>장점</span>
+                        그렇게 손으로 턱을 괸 채 염소 모피를 두르고 있는 모습은, 그대로 귀여운 천국의 목자였습니다.
+                      </p>
+                      <p>
+                        <span>단점</span>
+                        양들이 뒤척이는 서슬에 짚이 버스럭거리며, 혹은 잠결에 매하고 울음소리를 내는 놈도 있었습니다.
+                      </p>
+                    </div>
+                    <div class="recentReview_con_bottom">
+                      <div class="blind">별점 영역</div>
+                      <ul>
+                        <li>서울구로지역자활센터</li>
+                        <li>b***</li>
+                        <li>23.05.28</li>
+                      </ul>
+                    </div>
+                  </div><div class="recentReview_con">
+                    <div class="recentReview_con_top">
+                      <strong>저 별에 관해 서는 목동들 사이에 다음과 같은 얘기가 전하고 있답니다.</strong>
+                      <p>
+                        <span>장점</span>
+                        그렇게 손으로 턱을 괸 채 염소 모피를 두르고 있는 모습은, 그대로 귀여운 천국의 목자였습니다.
+                      </p>
+                      <p>
+                        <span>단점</span>
+                        양들이 뒤척이는 서슬에 짚이 버스럭거리며, 혹은 잠결에 매하고 울음소리를 내는 놈도 있었습니다.
+                      </p>
+                    </div>
+                    <div class="recentReview_con_bottom">
                       <div class="blind">별점 영역</div>
                       <ul>
                         <li>서울구로지역자활센터</li>
@@ -84,28 +127,6 @@
                     </div>
                   </div>
                 </div>
-                <div class="recenetReview_con">
-                  <div class="recenetReview_con_top">
-                    <strong>저 별에 관해 서는 목동들 사이에 다음과 같은 얘기가 전하고 있답니다.</strong>
-                    <p>
-                      <span>장점</span>
-                      그렇게 손으로 턱을 괸 채 염소 모피를 두르고 있는 모습은, 그대로 귀여운 천국의 목자였습니다.
-                    </p>
-                    <p>
-                      <span>단점</span>
-                      양들이 뒤척이는 서슬에 짚이 버스럭거리며, 혹은 잠결에 매하고 울음소리를 내는 놈도 있었습니다.
-                    </p>
-                    <div class="recenetReview_con_bottom">
-                      <div class="blind">별점 영역</div>
-                      <ul>
-                        <li>서울구로지역자활센터</li>
-                        <li>b***</li>
-                        <li>23.05.28</li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div></div>
               </div>
             </div>
           </section>
