폰트 사이즈 조정

--- a/public/signup.html
+++ b/public/signup.html
@@ -13,9 +13,8 @@
         <div class="signin_container">
             <header>
                 <div class = "area_logo">
-                    <div class="logo">
-                        <span>사회복지</span><span>채용</span>플랫폼 회원가입
-                    </div>
+                    <div class="logo"></div>
+                    회원가입
                 </div>
             </header>
             <!-- 회원가입 입력폼 --> <!-- name 부분은 DB 필드이름하고 매치-->
