result 페이지 1920 배너 제외 마크업 완료

--- a/public/search_result.html
+++ b/public/search_result.html
@@ -33,7 +33,13 @@
                 </div>
                 <div class="score">
                   <label>별점</label>
-                  <!-- <input type="image" src="/styles/images/1_point.png"> -->
+                  <div>
+                    <button type="button"></button>
+                    <button type="button"></button>
+                    <button type="button"></button>
+                    <button type="button"></button>
+                    <button type="button"></button>
+                  </div>
                 </div>
                 <div class="hashtag">
                   <label>키워드</label>
@@ -61,7 +67,46 @@
         </div>
       </section>
       <section>
-
+        <div class="list-section">
+          <div class="sort">
+            <select>
+              <option>별점 순</option>
+              <option>리뷰 많은 순</option>
+            </select>  
+          </div>
+          <ul class="corp-wrap">
+            <li>
+              <div class="corp-img">기관 이미지</div>
+              <div class="corp-data">
+                <div>
+                  <h1>서울특별시사회복지사협회</h1>
+                  <p>서울특별시 영등포구</p>  
+                </div>
+                <div class="corp-hash">
+                  <p>#해시태그1</p>
+                  <p>#해시태그2</p>
+                  <p>#해시태그3</p>
+                  <p>#해시태그4</p>
+                </div>
+              </div>
+              <div class="corp-score">
+                <div>
+                  <img src="/styles/images/Star_1.png">
+                  <p>4.3<span> (3)</span></p>
+                </div>
+                <a>리뷰보기</a>
+              </div>
+            </li>
+          </ul>
+          <div class="page">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>4</button>
+            <button>5</button>
+            <button>></button>
+          </div>
+        </div>
       </section>
     </main>
   </div>
